--- a/package.json
+++ b/package.json
@@ -17,11 +17,10 @@
     "web-vitals": "^0.2.4"
   },
   "scripts": {
-    "start": "yarn build:css && react-scripts start",
-    "build": "yarn build:css && react-scripts build",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "build:css": "postcss src/tailwind.css -o src/index.css"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -40,11 +39,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "autoprefixer": "^10.2.3",
-    "postcss": "^8.2.4",
-    "postcss-cli": "^8.3.1",
-    "tailwindcss": "^2.0.2"
   }
 }
