--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-router-dom": "^5.1.7",
     "autoprefixer": "^10.2.3",
     "postcss": "^8.2.4",
     "tailwindcss": "^2.0.2"
